# MotionCanvas

./: .gitignore  GPU_SETUP_SUMMARY.md  LICENSE  README.md  TRAIN_README.md  UV_SETUP.md  download_models.sh  inference_motioncanvas.py  pyproject.toml  requirements.txt  run.sh  setup_from_zero.sh  sync_gpu.sh  test_gpu.py  train_1.3b.bat  train_1.3b.ps1  train_1.3b.sh  train_1.3b_config.bat  train_1.3b_config.ps1  train_1.3b_local.sh
apps/gradio/: DiffSynth_Studio.py  entity_level_control.py  motioncanvas.py
apps/streamlit/: DiffSynth_Studio.py
data/: filtered_ram_tag_list.txt
diffsynth/: __init__.py
diffsynth/configs/: model_config.py
diffsynth/controlnets/: __init__.py  controlnet_unit.py  processors.py
diffsynth/data/: __init__.py  simple_text_image.py  video.py
diffsynth/distributed/: xdit_context_parallel.py
diffsynth/models/: __init__.py  attention.py  cog_dit.py  cog_vae.py  downloader.py  flux_controlnet.py  flux_dit.py  flux_infiniteyou.py  flux_ipadapter.py  flux_text_encoder.py  flux_vae.py  hunyuan_dit.py  hunyuan_dit_text_encoder.py  hunyuan_video_dit.py  hunyuan_video_text_encoder.py  hunyuan_video_vae_decoder.py  hunyuan_video_vae_encoder.py  kolors_text_encoder.py  lora.py  model_manager.py  omnigen.py  qwenvl.py  sd3_dit.py  sd3_text_encoder.py  sd3_vae_decoder.py  sd3_vae_encoder.py  sd_controlnet.py  sd_ipadapter.py  sd_motion.py  sd_text_encoder.py  sd_unet.py  sd_vae_decoder.py  sd_vae_encoder.py  sdxl_controlnet.py  sdxl_ipadapter.py  sdxl_motion.py  sdxl_text_encoder.py  sdxl_unet.py  sdxl_vae_decoder.py  sdxl_vae_encoder.py  (+17 more)
(+180 files in other folders)
